Support experiment timing and battery level dropped calculation